# WolfEngine

./: .gitignore  CMakeLists.txt  README.md  WEAP.py  cxx_only_flags.py  mkdocs.yml  platformio.ini  run_asset_converter.py  sdkconfig.defaults
.github/workflows/: deploy.yml
Documentation/: Documentation.md  Engine_Issues.md  SDL3_AI_Documentation.md  SDL3_Issues.md  SDL_ISSUES.md  SOLVED_ISSUES.md  Structure.md  architecture.md
Images/: assets.toml
WolfEngine/: WolfEngine.cpp  WolfEngine.hpp
WolfEngine/ComponentSystem/Components/: WE_BaseComp.hpp  WE_Comp_Animator.cpp  WE_Comp_Animator.hpp  WE_Comp_Sprite.cpp  WE_Comp_Sprite.hpp  WE_Comp_SpriteRenderer.cpp  WE_Comp_SpriteRenderer.hpp  WE_Comp_Transform.hpp  WE_Components.hpp
WolfEngine/Core/: WE_Constants.hpp  WE_ImputManager.cpp  WE_InputManager.hpp
WolfEngine/Drivers/DisplayDrivers/: WE_Display_Driver.hpp  WE_Display_ST7735.cpp  WE_Display_ST7735.hpp
WolfEngine/Drivers/EepromDrivers/: WE_EEPROM24LC512.hpp
WolfEngine/Drivers/IODrivers/: WE_ExpanderDrivers.hpp  WE_IExpander.hpp  WE_MCP23017.hpp  WE_PCF8574.hpp  WE_PCF8575.hpp
WolfEngine/GameObjectSystem/: WE_GORegistry.hpp  WE_GameObject.cpp  WE_GameObject.hpp
WolfEngine/Graphics/ColorPalettes/: WE_Palette_Cool.hpp  WE_Palette_Gameboy.hpp  WE_Palette_Grayscale.hpp  WE_Palette_Sunset.hpp  WE_Palette_Warm.hpp  WE_Palettes.hpp
WolfEngine/Graphics/RenderSystem/: WE_Camera.cpp  WE_Camera.hpp  WE_RenderCore.cpp  WE_RenderCore.hpp  WE_SpriteData.hpp
WolfEngine/Graphics/RenderSystem/DisplayDrivers/: WE_Display_Driver.hpp  WE_Display_ST7735.cpp  WE_Display_ST7735.hpp
WolfEngine/Graphics/SpriteSystem/: WE_Sprite.hpp  WE_SpriteData.hpp  WE_SpriteRotation.hpp
WolfEngine/Graphics/UserInterface/: WE_UIManager.cpp  WE_UIManager.hpp
WolfEngine/Graphics/UserInterface/Fonts/: WE_Font.hpp
WolfEngine/Graphics/UserInterface/UIElements/: UIPanel.cpp  UIPanel.hpp  WE_BaseUIElement.cpp  WE_BaseUIElement.hpp  WE_UIElements.hpp  WE_UILabel.cpp  WE_UILabel.hpp  WE_UIShape.cpp
WolfEngine/InputSystem/: WE_Controller.cpp  WE_Controller.hpp  WE_InputManager.cpp  WE_InputManager.hpp
WolfEngine/Modules/: WE_IModule.hpp  WE_ModuleRegistry.hpp  WE_ModuleSystem.cpp  WE_ModuleSystem.hpp
WolfEngine/Modules/SaveLoadSystem/: WE_SaveManager.cpp  WE_SaveManager.hpp  WE_SaveSettings.hpp
WolfEngine/Settings/: WE_InputSettings.hpp  WE_Modules.hpp  WE_PINDEFS.hpp  WE_RenderLayers.hpp  WE_RenderSettings.hpp  WE_Settings.hpp
WolfEngine/Utilities/: WE_Debug.h  WE_EEPROM24LC512.hpp  WE_I2C.cpp  WE_I2C.hpp  WE_PCF8574.hpp  WE_Time.cpp  WE_Time.hpp  WE_Timer.cpp  WE_Timer.hpp  WE_Vector2d.hpp
desktop/: Buildit.bat  CHANGES.md  CMakeLists.txt  KNOWN_ISSUES.md  WE_Display_SDL2.cpp  WE_SDLManager.cpp  WE_SDLManager.hpp  main_desktop.cpp
desktop/stubs/: Display_SDL.h  WE_Display_SDL2.hpp  WE_Display_SDL3.hpp  esp_err.h  esp_log.h  esp_timer.h
desktop/stubs/driver/: gpio.h  i2c.h  ledc.h
desktop/stubs/esp_adc/: adc_oneshot.h
desktop/stubs/freertos/: FreeRTOS.h  semphr.h
documentation/: AI_Documentation.md  Documentation.md  Engine_Issues.md  InlineDocStd.md  SDL3_Documentation.md  SOLVED_ISSUES.md  Structure.md
documentation/wiki/: index.md  input.md  render-layers.md  settings.md
documentation/wiki/core-systems/: audio.md  camera.md  engine.md  input.md  renderer.md  time-and-timer.md  ui-manager.md  uilabel.md  uipanel.md
documentation/wiki/engine-settings/: input.md  pin-definitions.md  render-layers.md  settings.md
documentation/wiki/gameobjects-and-components/: animator.md  gameobject.md  sprite-renderer.md  transform.md
documentation/wiki/getting-started/: Engine-Basics.md  first-gameobject.md  installation-and-setup.md
documentation/wiki/graphics/: asset-pipeline.md  buffer.md  how-to-setup-graphics.md  palette.md  renderer.md
documentation/wiki/overrides/: 404.html
documentation/wiki/ui-system/: uipanel.md
src/: CMakeLists.txt  main.cpp
src/GameCode/: Readme.md
src/GeneratedAssets/: Readme.md
src/GeneratedAssets/sprites/: .gitkeep
src/WolfEngine/: WolfEngine.cpp  WolfEngine.hpp
src/WolfEngine/ComponentSystem/Components/: WE_BaseComp.hpp  WE_Comp_Animator.cpp  WE_Comp_Animator.hpp  WE_Comp_Collider.cpp  WE_Comp_Collider.hpp  WE_Comp_SpriteRenderer.cpp  WE_Comp_SpriteRenderer.hpp  WE_Components.hpp
src/WolfEngine/Drivers/DisplayDrivers/: WE_Display_ST7735.cpp  WE_Display_ST7735.hpp
src/WolfEngine/Drivers/EepromDrivers/: WE_EEPROM24LC512.hpp  WE_IEEPROMDriver.hpp
src/WolfEngine/Drivers/IODrivers/: WE_ExpanderDrivers.hpp  WE_MCP23017.hpp  WE_PCF8574.hpp  WE_PCF8575.hpp
src/WolfEngine/GameFlow/: WE_GameFlowManager.cpp  WE_GameFlowManager.hpp
src/WolfEngine/GameObjectSystem/: WE_GORegistry.hpp  WE_GameObject.cpp  WE_GameObject.hpp
src/WolfEngine/Graphics/AnimationSystem/: WE_Animation.hpp
src/WolfEngine/Graphics/ColorPalettes/: WE_Palettes.hpp
src/WolfEngine/Graphics/RenderSystem/: WE_Camera.cpp  WE_DrawCommand.hpp  WE_RenderCore.cpp  WE_RenderCore.hpp  WE_RenderDualCore.cpp
src/WolfEngine/Graphics/SpriteSystem/: WE_Sprite.hpp
src/WolfEngine/Graphics/UserInterface/: WE_UIManager.cpp  WE_UIManager.hpp
src/WolfEngine/InputSystem/: WE_Controller.cpp  WE_Controller.hpp  WE_InputManager.cpp  WE_InputManager.hpp
src/WolfEngine/Modules/: WE_ModuleSystem.cpp
src/WolfEngine/Modules/CollisionSystem/: WE_CollisionModule.cpp  WE_CollisionModule.hpp
src/WolfEngine/Modules/SaveLoadSystem/: WE_SaveManager.cpp
src/WolfEngine/Physics/: WE_ColliderManager.hpp
src/WolfEngine/Settings/: WE_ConfigTypes.hpp  WE_DisplaySelector.hpp  WE_Layers.hpp  WE_Settings.hpp
src/WolfEngine/Sound/: WE_SoundManager.cpp
src/WolfEngine/Utilities/: WE_I2C.cpp  WE_I2C.hpp  WE_MathUtilities.hpp  WE_Time.cpp  WE_Time.hpp  WE_Timer.cpp
src/WolfEngine/Utilities/Debug/: WE_Debug.hpp  WE_Debug_ESP.cpp  (+1 more)
test/: Readme.md
tools/: aseprite_parser.py  asset_converter.py  codegen.py  generate_palettes.py  requirements.txt  run_asset_converter.py  watch_and_run.py
tools/palettes/: coolData.toml  gameboyData.toml  grayscaleData.toml  sunsetData.toml  warmData.toml
(+11 files in other folders)
